# ReduxR

./: Cargo.toml  README.md  cspell.json  pre-commit
.circleci/: config.yml
examples/async/: actions.rs  main.rs  selectors.rs  states.rs  stores.rs
examples/counter/: actions.rs  selectors.rs  states.rs  stores.rs
examples/light/: actions.rs  main.rs  middlewares.rs  selectors.rs  states.rs  stores.rs
examples/todo/: actions.rs  main.rs  selector.rs  selectors.rs  state.rs  states.rs  store.rs  stores.rs
src/: lib.rs  middleware.rs  reduce.rs  store.rs
src/todo_example/: mod.rs  state.rs  test.rs
