[package]
name = "reduxr"
version = "0.1.0"
authors = ["Elmer Bulthuis <elmerbulthuis@gmail.com>"]
edition = "2018"
description = "Redux store with full middleware support"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
