[package]
name = "reduxr"
version = "0.0.0"
description = "Redux store with full middleware support"
license = "BSD-2-Clause"
authors = ["Elmer Bulthuis <elmerbulthuis@gmail.com>"]
edition = "2018"
repository = "https://github.com/elmerbulthuis/reduxr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
